--- a/requirements.txt
+++ b/requirements.txt
@@ -48,3 +48,56 @@ urllib3==2.0.7
 wcwidth==0.2.6
 WebOb==1.8.7
 yarl==1.9.2
+aiohttp==3.8.5
+aiosignal==1.3.1
+appnope==0.1.3
+asttokens==2.2.1
+async-timeout==4.0.3
+attrs==23.1.0
+backcall==0.2.0
+black==23.7.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
+coverage==7.3.0
+decorator==5.1.1
+exceptiongroup==1.1.3
+executing==1.2.0
+frozenlist==1.4.0
+gunicorn==21.2.0
+idna==3.4
+iniconfig==2.0.0
+ipython==8.14.0
+jedi==0.19.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+multidict==6.0.4
+mypy-extensions==1.0.0
+openai==0.27.8
+packaging==23.1
+parse==1.19.1
+parso==0.8.3
+pathspec==0.11.2
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==3.10.0
+pluggy==1.2.0
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.16.1
+pytest==7.4.0
+pytest-cov==4.1.0
+requests==2.31.0
+requests-wsgi-adapter==0.4.1
+six==1.16.0
+stack-data==0.6.2
+tomli==2.0.1
+tqdm==4.66.1
+traitlets==5.9.0
+urllib3==2.0.4
+wcwidth==0.2.6
+WebOb==1.8.7
+whitenoise==6.5.0
+yarl==1.9.2
